--- a/assets/css/web.css
+++ b/assets/css/web.css
@@ -98,8 +98,9 @@ body {
   background: url(../img/pink.svg) no-repeat center / contain;
 }
 .firstScreen__body {
+  max-width: 93.75vw;
   display: flex;
-  align-items: center;
+align-content: center;
   position: relative;
 }
 .firstScreen__img {
@@ -145,16 +146,16 @@ body {
   letter-spacing: 0.53vw;
   text-transform: uppercase;
   color: #D7B9E4;
-  width: 414px;
+  width: 25.75vw;
 }
 .firstScreen__offer p {
   font-weight: 500;
   font-size: 1.46vw;
-  line-height: 37px;
+  line-height: 2.57vw;
   letter-spacing: 0.24px;
   color: #FFFFFF;
-  width: 338px;
-  margin: 20px 0;
+  width: 23.47vw;
+  margin: 1.39vw 0;
 }
 .second {
   width: 100%;
@@ -252,21 +253,21 @@ color: #EF3340;
 }
 
 .itemTitle__text{
-  margin-top: 22px;
+  margin-top: 1.53vw;
 }
 .itemTitle__text h1{
 font-style: normal;
 font-weight: 700;
 font-size: 1.81vw;
-line-height: 34px;
+line-height: 2.36vw;
 
-letter-spacing: 4.16px;
+letter-spacing: 0.285vw;
 text-transform: uppercase;
 
 color: #000000;
 }
 .item__subtext{
-  margin-top: 18px ;
+  margin-top: 1.25vw ;
 }
 .item__subtext a:after{
   content: "";
@@ -283,7 +284,7 @@ position: relative;
 
 font-weight: 400;
 font-size: 1.04vw;
-line-height: 15px;
+line-height: 1.04vw;
 letter-spacing: 2.4px;
 text-transform: uppercase;
 color: #000000;
@@ -296,6 +297,7 @@ color: #000000;
 
 }
 .third__body{
+  margin-left: -8.33vw;
   display: flex;
   justify-content: space-between;
 }
@@ -316,7 +318,7 @@ color: #000000;
 }
 
 .thirdItem__text{
-  margin-top: 3.65vw;
+  margin-top: 4.65vw;
   font-weight: 700;
   font-size: 2.08vw;
   line-height: 1.88vw;
@@ -325,7 +327,7 @@ color: #000000;
 }
 
 .third__column{
-  flex: 0 0 40%;
+  flex: 0 0 60%;
 }
 .thirdItem__img{
   margin-left: 2.78vw;
@@ -383,7 +385,7 @@ color: #000000;
   
 }
 .fourth__offer{
-  padding:70px 68px 129px 90px;
+  padding: 3.65vw 3.54vw  6.72vw 4.69vw;
 }
 .fourth__offer h1{
 
@@ -605,248 +607,38 @@ color: #fff;
   line-height: 15px;
 }
 
-/* .itemTitle__text h1 {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 15px;
-    line-height: 25px;
-} */
 .second {
   width: 100%;
   height: 480px;
   background: #F4C3CC;
 }
-.item__subtext a{
-  font-size: 12px ;
-}
-/* .thirdItem__img{
-  margin-left: 40px;
-  width: 375px;
-}
-.third{
-  padding: 88px 60px;
-}
-.thirdItem__text{
 
-  font-size: 25px;
-
-} */
-/* .fourth__offer h1{
-
-  font-size: 40px;
-  line-height: 60px;
-}
-.fourth__offer p{
-
-   font-size: 18px;
-  line-height: 30px;
-
-}
-.firthTitle{
-
-  font-size: 31px;
-  line-height: 65px;
-
-}
-.firthText{
-  font-size: 14px;
-  line-height: 33px;
-
-  }
-  .firthUnder_text{
- 
-  font-size: 12px;
-  line-height: 15px;
-
-  } */
 
 }
 
-  /* @media (max-width: 1160px){
-  .fourth__offer h1{
-
-  font-size: 35px;
-  line-height: 45px;
-}
-.fourth__offer p{
-
-   font-size: 15px;
-  line-height: 25px;
-
-}
-.sixthTitle__text{
-  font-weight: 700;
-  font-size: 23px;
-  line-height: 30px;
-
-  letter-spacing: 4.32px;
-  text-transform: uppercase;
-  color: #FFFFFF;
-}
-.sixthUnder__text{
-  font-size: 15px;
-  line-height: 30px;
-
-}
-.sixthLinks a{
-  font-size: 10px;
-  line-height: 23px;
-
-}
-.sixthMid__text{
-  font-size: 15px;
-  line-height: 30px;
-}
-.sixthButton__settings{
-  font-size: 12px;
-  line-height: 15px;
-
-}
-  } */
-
-
-  /* @media (max-width: 1050px){
-  .fourth__offer h1{
-
-  font-size: 30px;
-  line-height: 40px;
-
-}
-.fourth__offer p{
-
-  font-size: 15px;
-  line-height: 23px;
-
-
- }
-} */
-
-
-@media(max-width: 985px){
-.item__subtext a{
-  font-size: 11px;
-  line-height: 15px;
- }
-  .itemTitle__text h1 {
-    font-size: 14px;
-    line-height: 25px;
- }
-/* .thirdItem__img{
-
-  width: 350px;
- }
-  .third__title{
-    font-size: 45px ;
-  }
-  .thirdItem__text{
-  font-size: 22px;
- }
- .thirdItem__img{
-  margin-left: 40px;
-  width: 350px;
- } */
-  /* .fourth__offer h1{
-  font-size: 25px;
-  line-height: 35px;
- } 
-
-.fourth__offer p{
-
-  font-size: 13px;
-  line-height: 20px;
-
-}
-.sixthButton__settings{
-  font-size: 10px;
-  line-height: 15px;
-}
-.sixthTitle__text{
-  font-size: 23px;
-  line-height: 30px;
-}
-.sixthUnder__text{
-  font-size: 15px;
-  line-height: 30px;
-
-}
-.sixthLinks a{
-  font-size: 10px;
-  line-height: 23px;
-
-}
-.sixthMid__text{
-
-  font-size: 15px;
-  line-height: 30px;
-
- } */
-
-}
-
-/* @media(max-width: 910px){
-.fourth{
-
-  height: 750px;
-
-}
-  .fourth__offer h1{
-
-  font-size: 21px;
-  line-height: 30px;
-
-} 
-.fourth__offer p{
-
-  font-size: 12px;
-  line-height: 18px;
-
-
- } 
-.fourth__button{
-
-  font-size: 10px;
-
- } 
-.sixthBody__third a{
-  font-weight: 400;
-  font-size: 11px;
-  line-height: 21px;
-  letter-spacing: 0.98px;
-  text-transform: uppercase;
-  color: #FFFFFF;
-  margin:0 5px;
-}
-.sixthUnder__text{
-  font-size: 13px;
-  line-height: 30px;
-  }
-.sixthTitle__text{
-  font-size: 20px;
-  line-height: 35px;
-}
-.sixthButton__settings{
-  font-size: 9px;
-  line-height: 15px;
-}
-.thirdItem__img{
-  margin-left: 40px;
-  width: 320px;
-}
-
-} */
  @media(max-width: 780px){
-/* .thirdItem__img{
-  width: 280px;
-}  
-.third__title{
-  font-size: 35px ;
+  .firstScreen__body {
+    max-width: 93.75vw;
+    display: block;
+  align-content: center;
+    position: relative;
+  }  
+  .firstScreen__img {
+      position: relative;
+      padding-left: 15vw;
+      object-fit: scale-down;
+      width: 59.38vw;
+      height: 42.85vw;
+  }
+.firstScreen__offer {
+  margin-left: 17.54vw;
 }
-.thirdItem__text{
-font-size: 16px;
+.second {
+  width: 100%;
+  height: 400px;
+  background: #F4C3CC;
 }
-.sixthBody__third a{
-  font-size: 8px; 
-}  */
+
 .fourth{
   width: 100%;
   position: relative;
@@ -855,6 +647,28 @@ font-size: 16px;
   padding: 0.93vw 5.13vw;
 }
 }
+@media (max-width:640px)
+{
+  .link__block{
+    display: none;
+  } 
+}
+@media(max-width:550px){
+  .third__body {
+    margin-left: -19.33vw;
+  }
+}
 @media(max-width:475px){
-  
+  .second {
+    width: 100%;
+    height: 320px;
+    background: #F4C3CC;
+  }
+  .thirdItem__text {
+    font-weight: 700;
+    font-size: 2.08vw;
+    line-height: 1.88vw;
+    letter-spacing: 4.8px;
+    text-transform: uppercase;
+}
 } 
