--- a/assets/css/web.css
+++ b/assets/css/web.css
@@ -159,7 +159,7 @@ align-content: center;
 }
 .second {
   width: 100%;
-  height: 628px;
+  height: 43.61vw;
   background: #F4C3CC;
 }
 .second__body{
