--- a/assets/css/web.css
+++ b/assets/css/web.css
@@ -425,6 +425,7 @@ color: #000000;
   height: 3.59vw;
   background: url(../img/line.png), #7BA4DB;
   background-repeat: repeat-x;
+  background-size: 21.88vw;
   background-position: center center;
 }
 .fifth{
@@ -651,7 +652,13 @@ color: #fff;
 {
   .link__block{
     display: none;
-  } 
+  }
+  .adLine{
+  height: 3.59vw;
+  background: url(../img/line.png), #7BA4DB;
+  background-size: 30.88vw;
+  background-position: center center;
+}
 }
 @media(max-width:550px){
   .header__menu li a {
