--- a/assets/css/secondVar.css
+++ b/assets/css/secondVar.css
@@ -22,16 +22,13 @@
 .wave {
   z-index: 1000;
   opacity: 1;
-  top: 50%;
-  left: 50%;
-  width: 200%;
-  height: 200%;
+  width: 20.04vw;
+  height: 20.04vw;
   position: absolute;
   border-radius: 50%;
-  /* transform: scale(0); */
-  transform: translate(-50%, -50%);
+  transform: scale(0);
   animation: wave-animation 1s linear forwards;
-  background: #171C8F; 
+  background: #7a7514c2;
   transition: background 1s linear;
 }
 @keyframes wave-animation {
@@ -760,6 +757,12 @@ color: #fff;
   text-transform: uppercase;
   color: #FFFFFF;
 }
+.wave {
+  z-index: 1000;
+  opacity: 1;
+  width: 27.04vw;
+  height: 27.04vw;
+}  
 }
 @media(max-width:475px){
   .second {
@@ -814,11 +817,7 @@ color: #fff;
   letter-spacing: 0.61px;
   color: #000000;
 }
-}   
-@media (orientation: portrait) {
-  .wave {
-    width: 200vh;
-    height: 200vh;
+}
   }
 }
 
