--- a/assets/css/web.css
+++ b/assets/css/web.css
@@ -746,6 +746,12 @@ color: #fff;
     margin: -35px -22.5px;
     max-width: 65%;
 }
+  .wave {
+  z-index: 1000;
+  opacity: 1;
+  width: 32.04vw;
+  height: 32.04vw;
+} 
   .item__text a {
     font-weight: 400;
     font-size: 1.3vw;
